added getNowPlayingTMDB function
