# backend/api/openapi.yaml
@@ -255,6 +255,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /movies/getNowPlayingTMDB:
+    get:
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Succesful
+          content:
+            application/json:
+              schema:
+                type: string   
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 
   /movies/credits/{movieID}:
     get:
